--- a/talk_slides/iascars_presentation_theme.scss
+++ b/talk_slides/iascars_presentation_theme.scss
@@ -37,12 +37,34 @@ $accent-lapis-lazuli: #FF6E6E;
 
 $dark-blue: #021627;
 $light-red: #D6311F;
+$smoke-gray: #A7A7A7;
 
 $body-bg: $white;
 $body-color: $dark-blue;
 $font-family-sans-serif: $poppins;
 $presentation-heading-font: $barlow;
 $accent-color: $light-red;
+
+.slide-menu-button {
+  display: none;
+}
+
+.footer {
+  font-size: 0.9rem;
+  color: darken($smoke-gray, 50%) !important;
+}
+
+.reveal .progress {
+  color: $light-red !important;
+}
+
+.reveal .slide-number {
+  color: $smoke-gray !important;
+}
+
+.center {
+  text-align: center;
+}
 
 .reveal blockquote {
   color: $accent-color !important;
@@ -60,6 +82,14 @@ $accent-color: $light-red;
   text-align: center;
 }
 
+#seeing-the-smoke-before-the-fire {
+  max-width: 80%;
+}
+
+#thank-you {
+  top: 0;
+}
+
 .accent-color {
   color: $accent-color;
 }
@@ -75,6 +105,106 @@ $accent-color: $light-red;
 .what-is-a-obj {
   color: $accent-color;
   font-style: italic;
+}
+
+.card-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.card {
+  background: #fff;
+  border-radius: 4px;
+  box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.3);
+  display: flex;
+  flex-direction: row;
+  border-radius: 25px;
+  position: relative;
+  max-width: 95%;
+}
+.card h2 {
+  margin: 0;
+  padding: 0 1rem;
+}
+.card .title {
+  padding: 1rem;
+  text-align: right;
+  color: green;
+  font-weight: bold;
+  font-size: 12px;
+}
+.card .desc {
+  padding: 0.5rem 1rem;
+  font-size: 1.5rem;
+}
+
+.card svg {
+  width: 85px;
+  height: 85px;
+  margin: 0 auto;
+}
+
+.img-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.img-avatar {
+  width: 128px;
+  height: 128px;
+  border-radius: 50%;
+  border: 6px solid white;
+  background-image: linear-gradient(-60deg, #16a085 0%, #f4d03f 100%);
+  overflow: hidden;
+}
+
+.img-avatar img {
+  width: 100%;
+  margin: 0 !important;
+  max-width: fit-content !important;
+  max-height: fit-content !important;
+}
+
+.card-text {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+}
+
+.title-total {
+  padding: 1.5em 1.5em 1.5em 1.5em;
+}
+
+path {
+  fill: white;
+}
+
+.img-portada {
+  width: 100%;
+}
+
+.portada {
+  width: 100%;
+  height: 100%;
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
+  background-image: url("/imgs/banner-image.jpg");
+  background-position: bottom center;
+  background-size: cover;
+}
+
+button {
+  border: none;
+  background: none;
+  font-size: 24px;
+  color: #8bc34a;
+  cursor: pointer;
+  transition:.5s;
+  &:hover{
+    color: #4CAF50  ;
+    transform: rotate(22deg)
+  }
 }
 /*-- scss:rules --*/
 
